chore(conductor): Mark track 'Refactor stock price and sector sync batch jobs' as complete